[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Art/mainscreen/1.png" type="Texture" id=2]
[ext_resource path="res://Art/mainscreen/2.png" type="Texture" id=3]
[ext_resource path="res://Art/mainscreen/3.png" type="Texture" id=4]
[ext_resource path="res://Art/mainscreen/4_final.png" type="Texture" id=5]
[ext_resource path="res://Art/mainscreen/5.png" type="Texture" id=6]
[ext_resource path="res://Art/mainscreen/6.png" type="Texture" id=7]
[ext_resource path="res://Art/Fonts/ZCOOLKuaiLe-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 8 )

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 639.997, 359.894 )
frames = SubResource( 4 )
frame = 4
playing = true

[node name="MainMenuContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 250.0
margin_right = -120.0
margin_bottom = -40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer"]
margin_right = 1040.0
margin_bottom = 430.0

[node name="CenterContainer" type="CenterContainer" parent="MainMenuContainer/VBoxContainer"]
margin_right = 1040.0
margin_bottom = 345.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer/VBoxContainer/CenterContainer"]
margin_left = 331.0
margin_top = 58.0
margin_right = 708.0
margin_bottom = 286.0
custom_constants/separation = 128

[node name="StartGameLabel" type="Label" parent="MainMenuContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 377.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 239, 32 )
focus_next = NodePath("../ExitGameLabel")
focus_previous = NodePath("../ExitGameLabel")
focus_mode = 2
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Duck Duck Go!"
align = 1
valign = 1

[node name="ExitGameLabel" type="Label" parent="MainMenuContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 183.0
margin_right = 377.0
margin_bottom = 228.0
rect_pivot_offset = Vector2( 239, 32 )
focus_next = NodePath("../StartGameLabel")
focus_previous = NodePath(".")
focus_mode = 2
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
text = "Duck Off (Exit)"
align = 1

[node name="CreditsLabel" type="Label" parent="MainMenuContainer/VBoxContainer"]
margin_top = 349.0
margin_right = 1040.0
margin_bottom = 430.0
custom_fonts/font = SubResource( 3 )
text = "Benjamin Hackl, Franz Josef Huber,
Philipp Moedritscher, Anja Ressmann
Fabian Schober"
align = 2
valign = 2

[connection signal="focus_entered" from="MainMenuContainer/VBoxContainer/CenterContainer/VBoxContainer/StartGameLabel" to="." method="StartGameLabel_emph_start"]
[connection signal="focus_exited" from="MainMenuContainer/VBoxContainer/CenterContainer/VBoxContainer/StartGameLabel" to="." method="StartGameLabel_emph_stop"]
[connection signal="gui_input" from="MainMenuContainer/VBoxContainer/CenterContainer/VBoxContainer/StartGameLabel" to="." method="_on_StartGameLabel_gui_input"]
[connection signal="focus_entered" from="MainMenuContainer/VBoxContainer/CenterContainer/VBoxContainer/ExitGameLabel" to="." method="ExitGameLabel_emph_start"]
[connection signal="focus_exited" from="MainMenuContainer/VBoxContainer/CenterContainer/VBoxContainer/ExitGameLabel" to="." method="ExitGameLabel_emph_stop"]
[connection signal="gui_input" from="MainMenuContainer/VBoxContainer/CenterContainer/VBoxContainer/ExitGameLabel" to="." method="_on_ExitGameLabel_gui_input"]
